--- a/app/views/apps/_issue_tracker_fields.html.haml
+++ b/app/views/apps/_issue_tracker_fields.html.haml
@@ -2,12 +2,12 @@
   %legend= t('.legend')
   = f.fields_for :issue_tracker do |issue_tracker_form|
     %div.issue_tracker.nested
-      %div.choose
+      %div.choose.radio
         - issue_tracker_types.each do |tracker_type|
-          = issue_tracker_form.label :type_tracker, :class => "label_radio #{tracker_type.label}", :value => tracker_type.label do
+          = issue_tracker_form.label :type_tracker, :class => "label_radio #{tracker_type.label} radio-inline", :value => tracker_type.label do
             - icon = tracker_type == issue_tracker_form.object.type ? :create : :inactive
-            %img.icon{"src" => tracker_type.icons[icon], "data-icon" => tracker_type.icons}
             = issue_tracker_form.radio_button :type_tracker, tracker_type.label, 'data-section' => tracker_type.label
+            %img.icon{"src" => tracker_type.icons[icon], "data-icon" => tracker_type.icons}
             = tracker_type.label
 
       - issue_tracker_types.each do |tracker_type|
@@ -15,5 +15,6 @@
           = issue_tracker_form.fields_for(:options) do |options_form|
             %p= tracker_type.note
             - tracker_type.fields do |field|
-              = options_form.label field.key, field.label
-              = field.input(options_form, issue_tracker_form.object)
+              .form-group
+                = options_form.label field.key, field.label
+                = field.input(options_form, issue_tracker_form.object, { class: 'form-control' })
