--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -1,18 +1,15 @@
-// We can't use jquery > 1.9
 //= require jquery
+//= require jquery_ujs
 //= require underscore
-// This rails.js version is not like the original.
-// We can't upgrade to the official version
-//= require rails
 //= require form
 //= require jquery.pjax
-//= require jquery.alerts
-//= require rails.alerts
 //= require errbit
-//= require apps.show
-//= require_self
+//= require bootstrap-sprockets
+//= require twitter/bootstrap/rails/confirm
 
 // Allow any gems named 'errbit_*' to require their own assets
 <% Gem.loaded_specs.keys.grep(/^errbit_/).each do |plugin|
   require_asset(plugin) rescue Sprockets::FileNotFound
 end %>
+
+$.fn.twitter_bootstrap_confirmbox.defaults.title = "<%= I18n.t('layouts.application.title') %>";
