--- a/app/views/apps/new.html.haml
+++ b/app/views/apps/new.html.haml
@@ -1,11 +1,11 @@
 - content_for :title, t('.title')
 - content_for :action_bar do
   = link_to_copy_attributes_from_other_app
-  = link_to(t('.cancel'), apps_path, :class => 'button')
+  = link_to(t('cancel'), apps_path, :class => 'btn btn-default')
 
 = form_for app_decorate do |f|
 
   = render 'fields', :f => f
 
-  %div.buttons= f.submit t('.add_app')
+  %div.buttons= f.submit t('.add_app'), class: 'btn btn-primary'
 
