--- a/app/views/notices/_backtrace_line.html.haml
+++ b/app/views/notices/_backtrace_line.html.haml
@@ -1,5 +1,5 @@
-%tr{:class => defined?(row_class) && row_class}
-  %td.line{:class => line.in_app? && 'in-app' }
+%div{:class => defined?(row_class) && row_class}
+  %p.line{:class => line.in_app? && 'in-app' }
     = line.link_to_source_file(app) do
       %span.path>= raw line.decorated_path
       %span.file>= line.file_name
