--- a/app/views/notices/_environment.html.haml
+++ b/app/views/notices/_environment.html.haml
@@ -1,8 +1,9 @@
-.window
-  %table.environment
+.table-responsive
+  %table.environment.table.table-striped.table-condensed.table-bordered.table-vertical
     - html_entities = HTMLEntities.new
     - notice.env_vars.sort_by {|pair| pair[0]}.each do |key, value|
       %tr
         %th= h(html_entities.decode(key))
-        %td.main= h(html_entities.decode(value))
+        %td.main
+          = h(html_entities.decode(value))
 
