--- a/app/views/notices/_summary.html.haml
+++ b/app/views/notices/_summary.html.haml
@@ -1,5 +1,5 @@
-.window
-  %table.summary
+.table-responsive
+  %table.summary.table.table-striped.table-condensed.table-bordered.table-vertical
     %tr
       %th= t('.message')
       %td.main.nowrap= message_graph(problem)
