--- a/app/views/problems/index.html.haml
+++ b/app/views/problems/index.html.haml
@@ -4,9 +4,13 @@
 
 - content_for :action_bar do
   - if all_errs
-    = link_to t('.hide_resolved'), problems_path(sort: params_sort, order: params_order), :class => 'button'
+    = link_to problems_path, :class => 'btn btn-default' do
+      %i.fa.fa-circle-o-notch
+      = t('.unresolved_errs')
   - else
-    = link_to t('.show_resolved'), problems_path(all_errs: true, sort: params_sort, order: params_order), :class => 'button'
+    = link_to problems_path(:all_errs => true), :class => 'btn btn-default' do
+      %i.fa.fa-circle-o
+      = t('.all_errs')
 
 %section
   = render 'problems/search', :all_errs => all_errs, :app_id => nil
