--- a/app/views/users/_fields.html.haml
+++ b/app/views/users/_fields.html.haml
@@ -1,40 +1,41 @@
 = errors_for user
 
-.required
-  = f.label :name, t('.name')
-  = f.text_field :name
+.required.form-group
+  = f.label :name
+  = f.text_field :name, class: 'form-control'
 
 - if Errbit::Config.user_has_username
-  .required
-    = f.label :username, t('.username')
-    = f.text_field :username
+  .required.form-group
+    = f.label :username
+    = f.text_field :username, class: 'form-control'
 
-.required
-  = f.label :email, t('.email')
-  = f.text_field :email
+.required.form-group
+  = f.label :email
+  = f.text_field :email, class: 'form-control'
 
 - if Errbit::Config.github_authentication
-  = f.label :github_login, "#{Errbit::Config.github_site_title} login"
-  = f.text_field :github_login
+  .form-group
+    = f.label :github_login, "#{Errbit::Config.github_site_title} login"
+    = f.text_field :github_login, class: 'form-control'
 
-.required
-  = f.label :per_page, t('.entries')
-  = f.select :per_page, [10, 20, 30, 50, 75, 100]
+.required.form-group
+  = f.label :per_page, t('.entries_per_page')
+  = f.select :per_page, [10, 20, 30, 50, 75, 100], {}, { class: 'form-control' }
 
-.required
-  = f.label :time_zone, t('.time_zone')
-  = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones
+.required.form-group
+  = f.label :time_zone
+  = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, {}, class: 'form-control'
 
-.required
-  = f.label :password, t('.password')
-  = f.password_field :password, :autocomplete => "off"
+.required.form-group
+  = f.label :password
+  = f.password_field :password, :autocomplete => "off", class: 'form-control'
 
-.required
-  = f.label :password_confirmation, t('.password_confirmation')
-  = f.password_field :password_confirmation
+.required.form-group
+  = f.label :password_confirmation
+  = f.password_field :password_confirmation, class: 'form-control'
 
 - if current_user.admin?
-  .checkbox
-    = f.check_box :admin
-    = f.label :admin, t('.admin')
-
+  .checkbox.form-group
+    %label
+      = f.check_box :admin
+      = t('users.admin')
