--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,10 +2,9 @@
 - content_for :action_bar do
   = render 'shared/link_github_account', :user => user
   = render 'shared/link_google_account'
-  = link_to(t('.cancel'), user_path(user), :class => 'button')
+  = link_to(t('cancel'), user_path(user), :class => 'btn btn-default')
 
 = form_for user, :html => {:autocomplete => "off"} do |f|
-  = user.errors.full_messages.to_sentence
   = render 'fields', :f => f
 
-  %div.buttons= f.submit t('.update_user')
+  %div.buttons= f.submit t('.update_user'), class: 'btn btn-primary'
