--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,29 +1,23 @@
 - content_for :title, t('.title')
 - content_for :action_bar do
   %span
-    = link_to(new_user_path) do
+    = link_to(new_user_path, class: 'btn btn-success') do
       %i.fa.fa-plus-circle
       = t('.new')
 
-%table.users
-  %thead
-    %tr
+.users-list.list-group
+  - users.each do |user|
+    = link_to user_path(user), class: 'list-group-item' do
       - if Errbit::Config.use_gravatar
-        %th
-      %th= t('.name')
-      - if Errbit::Config.user_has_username
-        %th= t('.username')
-      %th.main= t('.email')
-      %th= t('.admin')
-  %tbody
-    - users.each do |user|
-      %tr.user_list
-        - if Errbit::Config.use_gravatar
-          %td= gravatar_tag user.email, :s => 24
-        %td.nowrap= link_to user.name, user_path(user)
+        .mug
+          = gravatar_tag user.email, :s => 48
+      - if user.admin?
+        %div.admin= t('.admin')
+      .info
+        .name= user.name
         - if Errbit::Config.user_has_username
-          %td= user.username
-        %td= user.email
-        %td= user.admin? ? t('.admin_yes') : t('.admin_no')
+          .username= user.username
+        .email= user.email
+
 = paginate users
 
