--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,7 @@
 - content_for :title, t('.title')
-- content_for :action_bar, link_to(t('.cancel'), users_path, :class => 'button')
+- content_for :action_bar, link_to(t('cancel'), users_path, :class => 'btn btn-default')
 
 = form_for user do |f|
-
   = render 'fields', :f => f
 
-  %div.buttons= f.submit t('.add_user')
+  %div.buttons= f.submit t('.add_user'), class: 'btn btn-primary'
