--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,21 +4,25 @@
   - content_for :title_style do
     background: url('#{gravatar}') no-repeat;
     padding-left: 106px;
+    min-height: 86px;
 
 - content_for :action_bar do
   = render 'shared/link_github_account'
-  = render 'shared/link_google_account'
-  = link_to t('.edit'), edit_user_path(user), :class => 'button'
-  = link_to t('.destroy'), user_path(user), :method => :delete,
-    :data => { :confirm => t('users.confirm_delete') }, :class => 'delete button'
+  = link_to edit_user_path(user), :class => 'btn btn-default' do
+    %i.fa.fa-edit
+    = t('edit')
+  = link_to user_path(user), :method => :delete, 
+    :data => { :confirm => t('users.confirm_delete') }, :class => 'delete btn btn-danger' do
+    %i.fa.fa-remove
+    = t('destroy')
 
-%table.single_user
+%table.single_user.table.table-striped.table-vertical.table-bordered
   %tr
     %th= t('.email')
     %td.main= user.email
   - if Errbit::Config.user_has_username
     %tr
-      %th= t('.username')
+      %th= t('users.username')
       %td.main= user.username
   - if Errbit::Config.github_authentication && user.github_login.present?
     %tr
