break words as needed

--- a/app/assets/stylesheets/errbit.scss
+++ b/app/assets/stylesheets/errbit.scss
@@ -129,3 +129,10 @@ fieldset {
 ul.nav-tabs {
   margin-top: 1em;
 }
+
+/* break all superlong words */
+div.row.content {
+  div [class*='col-'] {
+    word-break: break-all;
+  }
+}
