--- a/app/views/shared/_link_google_account.html.haml
+++ b/app/views/shared/_link_google_account.html.haml
@@ -1,5 +1,5 @@
 - if Errbit::Config.google_authentication && user == current_user
   - if user.google_account?
-    %span.google= link_to "Unlink #{Errbit::Config.google_site_title} account", unlink_google_user_path, method: :delete, data: { confirm: 'Are you sure?' }
+    %span.google= link_to t("users.show.unlink_account", account: Errbit::Config.google_site_title), unlink_google_user_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-warning'
   - else
-    %span.google= link_to "Link #{Errbit::Config.google_site_title} account", user_google_oauth2_omniauth_authorize_path
+    %span.google= link_to "Link #{Errbit::Config.google_site_title} account", user_google_oauth2_omniauth_authorize_path, class: 'btn btn-default'
